# marketlens-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.search_cache/: web-search-dcf-516eb8bc240a.json
data/: evidence.csv  finance_metrics.csv  sources.json
data/processed/: agent_demo.json
docs/: prompt_templates.md  source_register.md  workflow_sop.md
docs/superpowers/plans/: 2026-06-19-marketlens-ai-implementation.md  2026-06-20-marketlens-agent-v2-implementation.md  2026-06-20-marketlens-real-llm-websearch.md  2026-06-20-v2.1-completion-summary.md
docs/superpowers/specs/: 2026-06-19-marketlens-ai-design.md  2026-06-20-marketlens-agent-v2-design.md  2026-06-20-marketlens-agent-v2-design.zh-CN.md
mockups/brainstorm/: consulting-style-v1.html  consulting-style-v2-light.html  direction-lock.html  frontend-design-editorial-studio.html  hybrid-abc-v1.html  premium-research-desk-v2.html  visual-direction.html  waiting-after-visual.html
scripts/: build_artifacts.py  build_internship_shortlist.py  collect_sources_firecrawl.ps1  demo_real_llm.py  smoke_test_deepseek.py
src/marketlens/: __init__.py  api.py  export.py  load.py  schemas.py  score.py  synthesize.py
src/marketlens/agent/: __init__.py  agents.py  finance.py  llm.py  (+6 more)
tests/: test_agent_agents.py  test_agent_demo_artifact.py  test_agent_e2e.py  test_agent_llm.py  test_agent_models.py  test_agent_orchestrator.py  test_agent_runtime.py  test_agent_tools.py  test_api.py  test_export.py  test_schemas.py  test_score.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
(+11 files in other folders)
