[project]
name = "marketlens-ai"
version = "0.1.0"
description = "Source-backed competitive intelligence workflow for fresh beverage brands."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "uvicorn[standard]>=0.35",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.28"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
